updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,34 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning how to code in order to get 
+        a job that actually puts money on the table. 
+        If only creative writing, music, and other beloved art forms 
+        were less risky and more financially stable career paths...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Milford, CT. The town where if you were 
+        expecting more than a Westfield Mall Center... 
+        I'm so sorry, let me reimburse your travel expenses.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Writing, Gaming, Music, Exercise/Gym, basically anything that
+        is only marketable/financially stable under the right circumstances
+        accompanied by good ol' fashioned dumb luck.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>TV Staff Writer or Executive Producer, but because those
+        career paths are very hit or miss, I'm turning to coding careers
+        in order to have finances to fall back on in the scenario that 
+        LA/Hollywood chews me up and spits me out.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Oakland, CA. What? Were you expecting another sarcastic quip?
+        I don't have snarky remarks for everything, you know.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>As previously stated, to obtain marketable skills and be able
+        to achieve financial stability. Plus, I was always interested in
+        coding, but never found the time to pursue learning it until now.
+        Totally not because I realized a lot of the skills I developed in
+        college weren't as financially sound or anything... Okay, yes it was
+        because of that, but nevertheless, I still enjoy coding and wish
+        to make a career out of it.</p>
     </section>
 
     <footer id="footer">
